--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
+  <script 
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhkQAE-iE2lzlFrmWxEXEYDFHGkzKSAYk">
+</script>
 </head>
 
 <body>
